--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,44 @@
-.DS_Store
-*~
+analysisTutorial/prepFiles
+
+# OS
 #*
+.vscode
+*~
+.DS_Store
+
+# Byte-compiled / optimized / DLL files
+*.pyc
+__pycache__/
+*/__pycache__/*
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+
+# Unit test / coverage reports
+.pytest_cache/
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
